--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Felipe <felipe1180@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "git-commit-msg-linter": "^3.2.8"
+    "@types/node": "^16.9.1",
+    "git-commit-msg-linter": "^3.2.8",
+    "typescript": "^4.4.3"
   }
 }
