--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.0.0",
     "git-commit-msg-linter": "^3.2.8",
-    "husky": "^7.0.2",
     "jest": "^27.1.1",
     "lint-staged": "^11.1.2",
     "ts-jest": "^27.0.5",
-    "typescript": "*"
+    "typescript": "*",
+    "husky": "^7.0.0"
   },
   "scripts": {
-    "test": "jest",
-    "test:staged": "jest"
+    "test": "jest --passWithNoTests",
+    "test:staged": "jest --passWithNoTests",
+    "prepare": "husky install"
   }
 }
