--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "husky": "^7.0.0"
   },
   "scripts": {
-    "test": "jest --passWithNoTests",
+    "test": "jest --passWithNoTests --watch",
     "test:staged": "jest --passWithNoTests",
     "prepare": "husky install"
   }
